--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -52,7 +52,7 @@
                   <%= locals.user.firstName %>
                 </a>
                 <div class="dropdown-content">
-                  <a href="/userProfile">Profile</a>
+                  <a href="/profile">Profile</a>
                   <a href="/logout">Logout</a>
                 </div>
               </div>
