--- a/public/styles.css
+++ b/public/styles.css
@@ -600,6 +600,7 @@ body {
 .footer {
   background-color: #161616;
   padding: 30px 0;
+  margin-bottom: 0;
 }
 
 .footer h5 {
@@ -1219,6 +1220,37 @@ body {
   border-radius: 5px;
 }
 
+.price-filter {
+  margin: 20px;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: #ddd;
+  outline: none;
+  opacity: 0.7;
+  transition: opacity .2s;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+
 /* Product Detail Page Styling */
 .pedalist-product-detail {
   padding-top: 20px;
@@ -1252,6 +1284,38 @@ body {
   font-size: 1.75rem;
   margin-bottom: 10px;
 }
+
+.pedalist-product-info h4 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.pedalist-product-info li {
+
+  margin-bottom: 10px;
+}
+.pedalist-product-info .availability{
+  margin-bottom: 20px;
+}
+
+.pedalist-product-info .available {
+  padding: 5px 10px;
+  background-color: green;
+  color: #fff;
+}
+
+.pedalist-product-info .out-of-stock {
+  padding: 5px 10px;
+  background-color: yellow;
+  color: #000;
+}
+
+.pedalist-product-info .discontinued {
+  padding: 5px 10px;
+  background-color: red;
+  color: #fff;
+}
+
 
 .pedalist-product-info .price {
   color: #28a745;
