--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -19,7 +19,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMy8cN8D8y1R6FTz1nQvNI8/iUmZzYb8i0t7z4" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.css">
   
   <link rel="stylesheet" href="styles.css">
 
@@ -48,7 +50,7 @@
                       <%= locals.user.firstName %>
                     </a>
                     <div class="dropdown-content">
-                      <a href="/userProfile">Profile</a>
+                      <a href="/profile">Profile</a>
                       <a href="/logout">Logout</a>
                     </div>
                   </div>
