--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -66,6 +66,10 @@
               <%= message %>
             </div>
           <%}%>
+          <% if (errorMessage.length > 0) { %>
+            <div class="alert alert-danger"><%= errorMessage %></div>
+        <% } %>
+        <p class="text-end"><a href="/forgot-password">Forgot Password?</a></p>
           <button class="button">CONTINUE</button>
         </div>
 
